# DomainHacks

./: README.md  pyproject.toml
data/: tlds.txt  words.txt
src/domainhacks/: CheckDomains.py  GenerateDomainHacks.py  vpn.py
